--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "biome check .",
     "lint:fix": "biome check . --write --unsafe",
     "format": "pnpm biome format --write --no-errors-on-unmatched ./src",
-    "test": "vitest",
+    "test": "vitest --passWithNoTests",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
